0.1.1

  * Added missing statusbar tips


0.1.0
(March 1, 2009)

  * Initial release