@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>396</width>
+    <width>508</width>
     <height>279</height>
    </rect>
   </property>
@@ -257,10 +257,50 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
         <string>&amp;Options</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4" >
+        <item row="0" column="0" >
+         <layout class="QHBoxLayout" name="horizontalLayout_5" >
+          <item>
+           <widget class="QLabel" name="label_7" >
+            <property name="text" >
+             <string>&amp;Save video as:</string>
+            </property>
+            <property name="buddy" >
+             <cstring>saveasEdit</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="saveasEdit" >
+            <property name="enabled" >
+             <bool>true</bool>
+            </property>
+            <property name="toolTip" >
+             <string>Write video to file. Overrides default file naming.</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="saveasButton" >
+            <property name="enabled" >
+             <bool>true</bool>
+            </property>
+            <property name="text" >
+             <string>&amp;Browse</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
         <item row="1" column="0" >
          <layout class="QHBoxLayout" name="horizontalLayout_6" >
           <item>
            <widget class="QLabel" name="label_9" >
+            <property name="sizePolicy" >
+             <sizepolicy vsizetype="Preferred" hsizetype="Maximum" >
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text" >
              <string>&amp;Format:</string>
             </property>
@@ -271,6 +311,12 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
           </item>
           <item>
            <widget class="QComboBox" name="formatCombo" >
+            <property name="sizePolicy" >
+             <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="toolTip" >
              <string>Download format of the video. This is a website specific feature.
 
@@ -332,40 +378,13 @@ If unsure, choose flv which is supported by all websites.</string>
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item row="6" column="0" >
-         <layout class="QHBoxLayout" name="horizontalLayout_7" >
-          <item>
-           <widget class="QCheckBox" name="commandBox" >
+           <widget class="QCheckBox" name="continueBox" >
             <property name="toolTip" >
-             <string>Run the command specified in the preferences after
-download finishes.</string>
+             <string>Attempt to continue a partially downloaded video file.
+Do not use for Youtube or GoogleVideo flv videos.</string>
             </property>
             <property name="text" >
-             <string>&amp;Run external command when done</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="preferencesButton" >
-            <property name="enabled" >
-             <bool>false</bool>
-            </property>
-            <property name="text" >
-             <string>&amp;Preferences...</string>
+             <string>&amp;Continue partially downloaded file</string>
             </property>
            </widget>
           </item>
@@ -384,34 +403,51 @@ download finishes.</string>
           </item>
          </layout>
         </item>
-        <item row="8" column="0" >
-         <spacer name="verticalSpacer_2" >
-          <property name="orientation" >
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0" >
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="2" column="0" >
-         <layout class="QHBoxLayout" name="horizontalLayout_8" >
+         <layout class="QHBoxLayout" name="horizontalLayout_9" >
           <item>
-           <widget class="QCheckBox" name="continueBox" >
+           <widget class="QCheckBox" name="streamBox" >
             <property name="toolTip" >
-             <string>Attempt to continue a partially downloaded video file.
-Do not use for Youtube or GoogleVideo flv videos.</string>
+             <string>Run the stream command defined in the preferences when
+the file transfer reaches the specified percent done.
+
+Note that if the started command runs out of downloaded
+video data, abby does not attempt to restore the last
+state. It is recommended that you use this feature
+with broadband connections only.</string>
             </property>
             <property name="text" >
-             <string>&amp;Continue partially downloaded file</string>
+             <string>&amp;Run stream command when transfer reaches:</string>
             </property>
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer_3" >
+           <widget class="QSpinBox" name="streamSpin" >
+            <property name="enabled" >
+             <bool>false</bool>
+            </property>
+            <property name="sizePolicy" >
+             <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip" >
+             <string>Stream command is started when file transfer
+reaches this percentage. Be sure to set it 
+high enough to make sure that there is enough
+video data for the command to process.</string>
+            </property>
+            <property name="suffix" >
+             <string>%</string>
+            </property>
+            <property name="minimum" >
+             <number>1</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_4" >
             <property name="orientation" >
              <enum>Qt::Horizontal</enum>
             </property>
@@ -425,39 +461,46 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
           </item>
          </layout>
         </item>
-        <item row="0" column="0" >
-         <layout class="QHBoxLayout" name="horizontalLayout_5" >
+        <item row="3" column="0" >
+         <layout class="QHBoxLayout" name="horizontalLayout_7" >
           <item>
-           <widget class="QLabel" name="label_7" >
-            <property name="text" >
-             <string>&amp;Save video as:</string>
-            </property>
-            <property name="buddy" >
-             <cstring>saveasEdit</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="saveasEdit" >
-            <property name="enabled" >
-             <bool>true</bool>
-            </property>
+           <widget class="QCheckBox" name="commandBox" >
             <property name="toolTip" >
-             <string>Write video to file. Overrides default file naming.</string>
+             <string>Run the command specified in the preferences after
+download finishes.</string>
+            </property>
+            <property name="text" >
+             <string>&amp;Run external command when transfer is finished</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="saveasButton" >
-            <property name="enabled" >
-             <bool>true</bool>
+           <spacer name="horizontalSpacer" >
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
             </property>
-            <property name="text" >
-             <string>&amp;Browse</string>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
             </property>
-           </widget>
+           </spacer>
           </item>
          </layout>
+        </item>
+        <item row="4" column="0" >
+         <spacer name="verticalSpacer_2" >
+          <property name="orientation" >
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -470,7 +513,7 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>396</width>
+     <width>508</width>
      <height>25</height>
     </rect>
    </property>
@@ -527,7 +570,6 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
   </action>
  </widget>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
   <tabstop>urlEdit</tabstop>
   <tabstop>startButton</tabstop>
   <tabstop>tabWidget_2</tabstop>
@@ -535,45 +577,11 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
   <tabstop>saveasEdit</tabstop>
   <tabstop>saveasButton</tabstop>
   <tabstop>formatCombo</tabstop>
-  <tabstop>continueBox</tabstop>
   <tabstop>commandBox</tabstop>
-  <tabstop>preferencesButton</tabstop>
   <tabstop>logEdit</tabstop>
  </tabstops>
  <resources/>
  <connections>
-  <connection>
-   <sender>action_Quit</sender>
-   <signal>activated()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>189</x>
-     <y>148</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>action_Preferences</sender>
-   <signal>activated()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>onPreferences()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>189</x>
-     <y>148</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>startButton</sender>
    <signal>clicked()</signal>
@@ -623,34 +631,34 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
    </hints>
   </connection>
   <connection>
-   <sender>commandBox</sender>
+   <sender>streamBox</sender>
    <signal>stateChanged(int)</signal>
    <receiver>MainWindow</receiver>
-   <slot>onCommandStateChanged(int)</slot>
+   <slot>onStreamStateChanged(int)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>141</x>
-     <y>150</y>
+     <x>69</x>
+     <y>151</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>244</x>
-     <y>151</y>
+     <x>253</x>
+     <y>139</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>preferencesButton</sender>
-   <signal>clicked()</signal>
+   <sender>action_Quit</sender>
+   <signal>activated()</signal>
    <receiver>MainWindow</receiver>
-   <slot>onPreferences()</slot>
+   <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>325</x>
-     <y>151</y>
+     <x>-1</x>
+     <y>-1</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>244</x>
-     <y>151</y>
+     <x>189</x>
+     <y>148</y>
     </hint>
    </hints>
   </connection>
@@ -670,14 +678,30 @@ Do not use for Youtube or GoogleVideo flv videos.</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>action_Preferences</sender>
+   <signal>activated()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onPreferences()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>253</x>
+     <y>139</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
-  <slot>onPreferences()</slot>
   <slot>onStart()</slot>
   <slot>onCancel()</slot>
   <slot>onAbout()</slot>
-  <slot>onCommandStateChanged(int)</slot>
   <slot>onSaveasStateChanged(int)</slot>
   <slot>onSaveasBrowse()</slot>
+  <slot>onStreamStateChanged(int)</slot>
+  <slot>onPreferences()</slot>
  </slots>
 </ui>
