@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>248</height>
+    <width>394</width>
+    <height>272</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -20,6 +20,16 @@
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" name="gridLayout_5" >
+   <item row="1" column="0" >
+    <widget class="QDialogButtonBox" name="buttonBox" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons" >
+      <set>QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" >
     <widget class="QTabWidget" name="tabWidget" >
      <property name="whatsThis" >
@@ -62,6 +72,37 @@
         </layout>
        </item>
        <item row="1" column="0" >
+        <layout class="QHBoxLayout" name="horizontalLayout_8" >
+         <item>
+          <widget class="QLabel" name="label_8" >
+           <property name="text" >
+            <string>S&amp;tream command:</string>
+           </property>
+           <property name="buddy" >
+            <cstring>streamEdit</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="streamEdit" >
+           <property name="toolTip" >
+            <string>Command to be run when file transfer reaches the
+percentage specified in the options.
+
+Example: /usr/local/bin/mplayer -really-quiet %i</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="streamButton" >
+           <property name="text" >
+            <string>B&amp;rowse</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="2" column="0" >
         <layout class="QHBoxLayout" name="horizontalLayout_4" >
          <item>
           <widget class="QLabel" name="label_4" >
@@ -96,7 +137,7 @@ Example: /usr/local/bin/mplayer %i</string>
          </item>
         </layout>
        </item>
-       <item row="2" column="0" >
+       <item row="3" column="0" >
         <layout class="QHBoxLayout" name="horizontalLayout_7" >
          <item>
           <widget class="QLabel" name="label_7" >
@@ -124,7 +165,7 @@ Example: /usr/local/bin/mplayer %i</string>
          </item>
         </layout>
        </item>
-       <item row="3" column="0" >
+       <item row="4" column="0" >
         <layout class="QHBoxLayout" name="horizontalLayout_5" >
          <item>
           <widget class="QLabel" name="label_5" >
@@ -367,16 +408,6 @@ been flagged as mature content.</string>
      </widget>
     </widget>
    </item>
-   <item row="1" column="0" >
-    <widget class="QDialogButtonBox" name="buttonBox" >
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons" >
-      <set>QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
  <tabstops>
@@ -527,6 +558,22 @@ been flagged as mature content.</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>streamButton</sender>
+   <signal>clicked()</signal>
+   <receiver>PreferencesDialog</receiver>
+   <slot>onBrowseStreamCommand()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>332</x>
+     <y>92</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>196</x>
+     <y>135</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onProxyChanged(int)</slot>
@@ -537,5 +584,6 @@ been flagged as mature content.</string>
   <slot>onBrowseCommand()</slot>
   <slot>onBrowseCclive()</slot>
   <slot>onLangChanged(int)</slot>
+  <slot>onBrowseStreamCommand()</slot>
  </slots>
 </ui>
